--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>РГР IT</title>
 </head>
 
-<body class="body">
+<body>
     <header class="header">
         <div class="container">
             <div class="header__inner">
@@ -29,19 +29,19 @@
                             </li>
                             <li class="menu__item">
                                 <img class="menu__icon" src="images/sf_minimap_icon.png" alt="">
-                                <a href="rules.html" class="menu__link">Правила</a>
+                                <a href="Html/rules.html" class="menu__link">Правила</a>
                             </li>
                             <li class="menu__item">
                                 <img class="menu__icon" src="images/sf_minimap_icon.png" alt="">
-                                <a href="gameLibrary.html" class="menu__link">Игротека</a>
+                                <a href="Html/gameLibrary.html" class="menu__link">Игротека</a>
                             </li>
                             <li class="menu__item">
                                 <img class="menu__icon" src="images/sf_minimap_icon.png" alt="">
-                                <a href="join.html" class="menu__link">Принять участие</a>
+                                <a href="Html/join.html" class="menu__link">Принять участие</a>
                             </li>
                             <li class="menu__item">
                                 <img class="menu__icon" src="images/sf_minimap_icon.png" alt="">
-                                <a href="about.html" class="menu__link">О нас</a>
+                                <a href="Html/about.html" class="menu__link">О нас</a>
                             </li>
                         </ul>
                     </nav>
@@ -52,7 +52,7 @@
                         <h1 class="header__title-desc">Турнир 1000-7 по DOTA 2</h1>
                         <h2 class="header__title-prize">Призовой фонд - Аркана на Techies</h2>
                     </div>
-                    <button class="header__button join__form-button">Принять участие</button>
+                    <button class="header__button">Принять участие</button>
 
                     <div class="header__popup hidden">
                         <div class="header__popup-closer">
@@ -62,10 +62,9 @@
                         </div>
                         <h1 class="header__popup-title">отправить заявку</h1>
                         <form class="header__popup-form header__join-form" action="">
-                            <input class="popup__form-input-name join__form-input" type="text" placeholder="Имя">
-                            <input class="popup__form-input-steamID join__form-input" type="text"
-                                placeholder="Steam ID">
-                            <button class="popup__form-button join__form-button">выскочить на zxc</button>
+                            <input class="popup__form-input-name" type="text" placeholder="Имя">
+                            <input class="popup__form-input-steamID" type="text" placeholder="Steam ID">
+                            <button class="popup__form-button">выскочить на zxc</button>
                         </form>
                     </div>
 
@@ -84,10 +83,12 @@
     <main class="main">
         <div class="container">
             <div class="main__wrapper">
-                <h1 class="main__title">Хочешь так же?</h1>
-                <img class="main__gif" src="images/alohadance-muscleups.gif" alt="">
-                <h1 class="main__motivation">Тогда брось вызов лучшим</h1>
-                <p class="main__winners">Наши победители</p>
+                <div class="main__top">
+                    <h1 class="main__title">Хочешь так же?</h1>
+                    <img class="main__gif" src="images/alohadance-muscleups.gif" alt="">
+                    <h1 class="main__motivation">Тогда брось вызов лучшим</h1>
+                    <p class="main__winners">Наши победители</p>
+                </div>
                 <div class="main__bottom">
                     <div class="main__counter">
                         <span class="main__counter-winners"></span>
@@ -119,16 +120,16 @@
                                 <a href="#">Главная</a>
                             </li>
                             <li class="footer__menu-link">
-                                <a href="rules.html">Правила</a>
+                                <a href="Html/rules.html">Правила</a>
                             </li>
                             <li class="footer__menu-link">
-                                <a href="gameLibrary.html">Игротека</a>
+                                <a href="Html/gameLibrary.html">Игротека</a>
                             </li>
                             <li class="footer__menu-link">
-                                <a href="join.html">Принять участие</a>
+                                <a href="Html/join.html">Принять участие</a>
                             </li>
                             <li class="footer__menu-link">
-                                <a href="about.html">О нас</a>
+                                <a href="Html/about.html">О нас</a>
                             </li>
                         </ul>
                     </div>
